<resources>
    <string name="app_name">USychol</string>

    <string name="btn_landing_title">Start now</string>
    <string name="btn_signin_title">Sign in</string>
    <string name="btn_signup_title">Sign up</string>
    <string name="btn_sign_plan_title">Sign plan</string>

    <string name="btn_create_report_title">Create</string>
    <string name="btn_create_activity_title">Create</string>
    <string name="btn_create_patient_title">Create</string>

    <string name="input_type_email">email</string>
    <string name="input_type_password">password</string>
    <string name="input_type_date">date</string>
    <string name="input_type_number">number</string>
    <string name="input_type_text">text</string>

    <string name="input_email_text">E-mail</string>
    <string name="input_email_hint">example@usychol.com</string>

    <string name="input_password_text">Password</string>
    <string name="input_password_hint">********</string>

    <string name="input_id_number_text">CRP Registration Number</string>
    <string name="input_id_number_hint">00000</string>

    <string name="input_document_text">CPF</string>
    <string name="input_document_hint">***-***-***-**</string>

    <string name="input_name_text">Name</string>
    <string name="input_name_hint">Name</string>

    <string name="input_birthday_text">Birthday</string>
    <string name="input_birthday_hint">January 01, 2021</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>